	  poll_interrupt() must cat call net_lostconnection() when a
	  loss of connection is reported.  Otherwise, the system will
	  not know that the connection has been lost.
	* sched/group_create.c, group_join.c, and group_leave.c:  Add
	  support for task groups.
	* sched/group_signal.c and task_exithook.c:  Send signal to all
	  members for the parent task group.
	* include/nuttx/sched.h and sched/env_*.c:  Move environment
	  variables into task group structure.
	* sched/: Lots of file changed.  Don't keep the parent task's
	  task ID in the child task's TCB.  Instead, keep the parent
	  task group IN the child task's task group.
	* fs/, sched/, include/nuttx/sched.h, and include/nutts/fs/fs.h:
	  Move file data from the TCB to the task group structure.
	* libc/stdio/, sched/, include/nuttx/lib.h, and include/nutts/fs/fs.h:
	  Move stream data from the TCB to the task group structure.
	* net/, sched/, and include/nuttx/net/net.h:  Move socket data
	  from the TCB to the task group structure.
	* sched/task_starthook.c, sched/task_start.c, and include/nuttx/sched.h:
	  Add a task start hook that will be called before the task main
	  is started. This can be used to schedule C++ constructors to run
	  automatically in the context of the new task.
	* binfmt/binfmt_execmodule: Execute constructors as a start hook.
	* sched/os_start.c: Fix ordering of group initialization.
	* configs/stm32f4discovery/usbnsh:  Add an NSH STM32F4Discovery
	  configuration that uses USB CDC/ACM for the NSH console.
	* configs/stm32f4discovery/nsh: Converted to use the kconfig-frontends
	  tools.
	* configs/*/src/up_userleds.c: Fix a error that was cloned into
	  all STM32 user LED code.  The wrong defintions were being used
	  to set LEDs on or off.
	* arch/*/common/up_internal.h and arch/*/common/up_initialize.c:
	  Serial was driver was not being built if there is no console
	  device.  Obviously, the serial driver may be needed even in
	  this case.
